semantic/DroolParser.java
// Generated from DroolParser.g4 by ANTLR 4.8

	import java.util.List;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DroolParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ERROR=1, Literal=2, LeftParen=3, RightParen=4, LeftBrace=5, RightBrace=6, 
		LeftBracket=7, RightBracket=8, Or=9, Star=10, And=11, Plus=12, Minus=13, 
		Tildae=14, Not=15, Div=16, Mod=17, Less=18, Greater=19, LessEqual=20, 
		GreaterEqual=21, Equal=22, NotEqual=23, Caret=24, AndAnd=25, OrOr=26, 
		Assign=27, StarAssign=28, DivAssign=29, ModAssign=30, PlusAssign=31, MinusAssign=32, 
		AndAssign=33, XorAssign=34, OrAssign=35, PlusPlus=36, MinusMinus=37, Dot=38, 
		Arrow=39, Sizeof=40, Hashtag=41, DoubleHashtag=42, Addc=43, Addr=44, Delr=45, 
		Delc=46, Questionmark=47, Inv=48, Trans=49, Det=50, Vsizeof=51, Esizeof=52, 
		Val=53, Pull=54, Push=55, HyphenD=56, If=57, Else=58, Switch=59, While=60, 
		For=61, Case=62, Default=63, Comma=64, Colon=65, Semi=66, SingleQuote=67, 
		DoubleQuote=68, Class=69, Void=70, Bool=71, Int=72, Float=73, String=74, 
		Graph=75, Edge=76, Matrix=77, Vertex=78, Long=79, Unsigned=80, Delete=81, 
		Continue=82, Break=83, Return=84, Input=85, Output=86, Const=87, False_=88, 
		True_=89, Identifier=90, IntegerLiteral=91, DecimalLiteral=92, Integersuffix=93, 
		FloatingLiteral=94, StringLiteral=95, BooleanLiteral=96, VertexLiteral=97, 
		Newline=98, WHITESPACE=99, ESC=100, UNTERM_STR=101, NULL_STR=102, ESC_NULL_STR=103, 
		EOF_BCKSLSH_STR=104, EOF_STR=105, EOF_COMMENT_0=106, OPEN_COMMENT=107, 
		SINGLE_LINE_COMMENT=108, MULTI_LINE_COMMENT=109, EOF_COMMENT_1=110, EOF_COMMENT_2=111, 
		IN_NEST_MLC_0=112, CLOSE_MLC_0=113, CONTENT_MLC_0=114, EOF_COMMENT_3=115, 
		EOF_COMMENT_4=116, EOF_COMMENT_5=117, IN_NEST_MLC_1=118, CLOSE_MLC_1=119, 
		CONTENT_MLC_1=120, OTHER=121;
	public static final int
		RULE_program = 0, RULE_primaryExpr = 1, RULE_postfixExpr = 2, RULE_exprList = 3, 
		RULE_unaryExpr = 4, RULE_unaryOpr = 5, RULE_addrcExpr = 6, RULE_multiplicationExpr = 7, 
		RULE_additiveExpr = 8, RULE_comparisonExpr = 9, RULE_equalityExpr = 10, 
		RULE_binAndExpr = 11, RULE_binXorExpr = 12, RULE_binOrExpr = 13, RULE_andExpr = 14, 
		RULE_orExpr = 15, RULE_assignExpr = 16, RULE_assignOpr = 17, RULE_graph = 18, 
		RULE_pushpullExpr = 19, RULE_pushpullOpr = 20, RULE_graphMemberArrayInit = 21, 
		RULE_expr = 22, RULE_constexpr = 23, RULE_inputStatement = 24, RULE_outputStatement = 25, 
		RULE_statement = 26, RULE_jumpStatement = 27, RULE_caseStatement = 28, 
		RULE_exprStatement = 29, RULE_compoundStatement = 30, RULE_statementSeq = 31, 
		RULE_selectStatement = 32, RULE_condition = 33, RULE_iterStatement = 34, 
		RULE_forInitStatement = 35, RULE_declarationStatement = 36, RULE_declarseq = 37, 
		RULE_declaration = 38, RULE_blockDeclaration = 39, RULE_simpleDeclaration = 40, 
		RULE_dataType = 41, RULE_initDeclaratorSeq = 42, RULE_initDeclarator = 43, 
		RULE_declarator = 44, RULE_parameters = 45, RULE_parameterDeclarationSeq = 46, 
		RULE_parameterDeclaration = 47, RULE_functionDefn = 48, RULE_functionBody = 49, 
		RULE_initializer = 50, RULE_braceOrEqualInitializer = 51, RULE_initializationClause = 52, 
		RULE_bracedInitSeq = 53, RULE_initializationseq = 54, RULE_className = 55, 
		RULE_classDefn = 56, RULE_classHead = 57, RULE_memberlist = 58, RULE_memberdeclaration = 59, 
		RULE_memberDeclaratorList = 60, RULE_memberDeclarator = 61, RULE_inheritanceClause = 62, 
		RULE_inheriterList = 63;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "primaryExpr", "postfixExpr", "exprList", "unaryExpr", "unaryOpr", 
			"addrcExpr", "multiplicationExpr", "additiveExpr", "comparisonExpr", 
			"equalityExpr", "binAndExpr", "binXorExpr", "binOrExpr", "andExpr", "orExpr", 
			"assignExpr", "assignOpr", "graph", "pushpullExpr", "pushpullOpr", "graphMemberArrayInit", 
			"expr", "constexpr", "inputStatement", "outputStatement", "statement", 
			"jumpStatement", "caseStatement", "exprStatement", "compoundStatement", 
			"statementSeq", "selectStatement", "condition", "iterStatement", "forInitStatement", 
			"declarationStatement", "declarseq", "declaration", "blockDeclaration", 
			"simpleDeclaration", "dataType", "initDeclaratorSeq", "initDeclarator", 
			"declarator", "parameters", "parameterDeclarationSeq", "parameterDeclaration", 
			"functionDefn", "functionBody", "initializer", "braceOrEqualInitializer", 
			"initializationClause", "bracedInitSeq", "initializationseq", "className", 
			"classDefn", "classHead", "memberlist", "memberdeclaration", "memberDeclaratorList", 
			"memberDeclarator", "inheritanceClause", "inheriterList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", "'|'", "'*'", 
			"'&'", "'+'", "'-'", "'~'", "'!'", "'/'", "'%'", "'<'", "'>'", "'<='", 
			"'>='", "'=='", "'!='", "'^'", "'&&'", "'||'", "'='", "'*='", "'/='", 
			"'%='", "'+='", "'-='", "'&='", "'^='", "'|='", "'++'", "'--'", "'.'", 
			"'->'", null, "'#'", "'##'", null, null, null, null, "'?'", null, null, 
			null, null, null, null, "'>>'", "'<<'", null, null, null, null, null, 
			null, null, null, "','", "':'", "';'", "'''", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ERROR", "Literal", "LeftParen", "RightParen", "LeftBrace", "RightBrace", 
			"LeftBracket", "RightBracket", "Or", "Star", "And", "Plus", "Minus", 
			"Tildae", "Not", "Div", "Mod", "Less", "Greater", "LessEqual", "GreaterEqual", 
			"Equal", "NotEqual", "Caret", "AndAnd", "OrOr", "Assign", "StarAssign", 
			"DivAssign", "ModAssign", "PlusAssign", "MinusAssign", "AndAssign", "XorAssign", 
			"OrAssign", "PlusPlus", "MinusMinus", "Dot", "Arrow", "Sizeof", "Hashtag", 
			"DoubleHashtag", "Addc", "Addr", "Delr", "Delc", "Questionmark", "Inv", 
			"Trans", "Det", "Vsizeof", "Esizeof", "Val", "Pull", "Push", "HyphenD", 
			"If", "Else", "Switch", "While", "For", "Case", "Default", "Comma", "Colon", 
			"Semi", "SingleQuote", "DoubleQuote", "Class", "Void", "Bool", "Int", 
			"Float", "String", "Graph", "Edge", "Matrix", "Vertex", "Long", "Unsigned", 
			"Delete", "Continue", "Break", "Return", "Input", "Output", "Const", 
			"False_", "True_", "Identifier", "IntegerLiteral", "DecimalLiteral", 
			"Integersuffix", "FloatingLiteral", "StringLiteral", "BooleanLiteral", 
			"VertexLiteral", "Newline", "WHITESPACE", "ESC", "UNTERM_STR", "NULL_STR", 
			"ESC_NULL_STR", "EOF_BCKSLSH_STR", "EOF_STR", "EOF_COMMENT_0", "OPEN_COMMENT", 
			"SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "EOF_COMMENT_1", "EOF_COMMENT_2", 
			"IN_NEST_MLC_0", "CLOSE_MLC_0", "CONTENT_MLC_0", "EOF_COMMENT_3", "EOF_COMMENT_4", 
			"EOF_COMMENT_5", "IN_NEST_MLC_1", "CLOSE_MLC_1", "CONTENT_MLC_1", "OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DroolParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		String filename;
		public void setFilename(String f){
			filename = f;
		}


	public DroolParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DroolParser.EOF, 0); }
		public DeclarseqContext declarseq() {
			return getRuleContext(DeclarseqContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroolParserListener ) ((DroolParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroolParserListener ) ((DroolParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroolParserVisitor ) return ((DroolParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & ((1L << (Semi - 66)) | (1L << (Class - 66)) | (1L << (Void - 66)) | (1L << (Bool - 66)) | (1L << (Int - 66)) | (1L << (Float - 66)) | (1L << (String - 66)) | (1L << (Graph - 66)) | (1L << (Edge - 66)) | (1L << (Matrix - 66)) | (1L << (Vertex - 66)) | (1L << (Identifier - 66)))) != 0)) {
				{
				setState(128);
				declarseq();
				}
			}

			setState(131);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryExprContext extends ParserRuleContext {
		public TerminalNode Literal() { return getToken(DroolParser.Literal, 0); }
		public TerminalNode Questionmark() { return getToken(DroolParser.Questionmark, 0); }
		public List<TerminalNode> Identifier() { return getTokens(DroolParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(DroolParser.Identifier, i);
		}
		public TerminalNode LeftParen() { return getToken(DroolParser.LeftParen, 0); }
		public TerminalNode Comma() { return getToken(DroolParser.Comma, 0); }
		public TerminalNode RightParen() { return getToken(DroolParser.RightParen, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> LeftBracket() { return getTokens(DroolParser.LeftBracket); }
		public TerminalNode LeftBracket(int i) {
			return getToken(DroolParser.LeftBracket, i);
		}
		public List<TerminalNode> RightBracket() { return getTokens(DroolParser.RightBracket); }
		public TerminalNode RightBracket(int i) {
			return getToken(DroolParser.RightBracket, i);
		}
		public List<ConstexprContext> constexpr() {
			return getRuleContexts(ConstexprContext.class);
		}
		public ConstexprContext constexpr(int i) {
			return getRuleContext(ConstexprContext.class,i);
		}
		public PrimaryExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroolParserListener ) ((DroolParserListener)listener).enterPrimaryExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroolParserListener ) ((DroolParserListener)listener).exitPrimaryExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroolParserVisitor ) return ((DroolParserVisitor<? extends T>)visitor).visitPrimaryExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimaryExprContext primaryExpr() throws RecognitionException {
		PrimaryExprContext _localctx = new PrimaryExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_primaryExpr);
		int _la;
		try {
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				match(Literal);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(134);
					match(Identifier);
					}
					break;
				case LeftParen:
					{
					{
					setState(135);
					match(LeftParen);
					setState(136);
					match(Identifier);
					setState(137);
					match(Comma);
					setState(138);
					match(Identifier);
					setState(139);
					match(RightParen);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(142);
				match(Questionmark);
				setState(143);
				match(Identifier);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				match(LeftParen);
				setState(145);
				expr();
				setState(146);
				match(RightParen);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(148);
				match(Identifier);
				setState(161);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(149);
					match(LeftBracket);
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Literal) | (1L << LeftParen) | (1L << Or) | (1L << Star) | (1L << And) | (1L << Plus) | (1L << Minus) | (1L << Tildae) | (1L << Not) | (1L << PlusPlus) | (1L << MinusMinus) | (1L << Sizeof) | (1L << Inv) | (1L << Trans) | (1L << Det) | (1L << Vsizeof) | (1L << Esizeof) | (1L << Val))) != 0) || _la==Identifier) {
						{
						setState(150);
						constexpr();
						}
					}

					setState(153);
					match(RightBracket);
					setState(159);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						setState(154);
						match(LeftBracket);
						setState(156);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Literal) | (1L << LeftParen) | (1L << Or) | (1L << Star) | (1L << And) | (1L << Plus) | (1L << Minus) | (1L << Tildae) | (1L << Not) | (1L << PlusPlus) | (1L << MinusMinus) | (1L << Sizeof) | (1L << Inv) | (1L << Trans) | (1L << Det) | (1L << Vsizeof) | (1L << Esizeof) | (1L << Val))) != 0) || _la==Identifier) {
							{
							setState(155);
							constexpr();
							}
						}

						setState(158);
						match(RightBracket);
						}
						break;
					}
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostfixExprContext extends ParserRuleContext {
		public PrimaryExprContext primaryExpr() {
			return getRuleContext(PrimaryExprContext.class,0);
		}
		public PostfixExprContext postfixExpr() {
			return getRuleContext(PostfixExprContext.class,0);
		}
		public TerminalNode LeftParen() { return getToken(DroolParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(DroolParser.RightParen, 0); }
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(DroolParser.Identifier, 0); }
		public TerminalNode Dot() { return getToken(DroolParser.Dot, 0); }
		public TerminalNode Arrow() { return getToken(DroolParser.Arrow, 0); }
		public TerminalNode PlusPlus() { return getToken(DroolParser.PlusPlus, 0); }
		public TerminalNode MinusMinus() { return getToken(DroolParser.MinusMinus, 0); }
		public TerminalNode Delr() { return getToken(DroolParser.Delr, 0); }
		public TerminalNode Delc() { return getToken(DroolParser.Delc, 0); }
		public PostfixExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postfixExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroolParserListener ) ((DroolParserListener)listener).enterPostfixExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroolParserListener ) ((DroolParserListener)listener).exitPostfixExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroolParserVisitor ) return ((DroolParserVisitor<? extends T>)visitor).visitPostfixExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PostfixExprContext postfixExpr() throws RecognitionException {
		return postfixExpr(0);
	}

	private PostfixExprContext postfixExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PostfixExprContext _localctx = new PostfixExprContext(_ctx, _parentState);
		PostfixExprContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_postfixExpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(166);
			primaryExpr();
			}
			_ctx.stop = _input.LT(-1);
			setState(181);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(179);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						_localctx = new PostfixExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpr);
						setState(168);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(169);
						match(LeftParen);
						setState(171);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Literal) | (1L << LeftParen) | (1L << LeftBrace) | (1L << Or) | (1L << Star) | (1L << And) | (1L << Plus) | (1L << Minus) | (1L << Tildae) | (1L << Not) | (1L << PlusPlus) | (1L << MinusMinus) | (1L << Sizeof) | (1L << Inv) | (1L << Trans) | (1L << Det) | (1L << Vsizeof) | (1L << Esizeof) | (1L << Val))) != 0) || _la==Identifier) {
							{
							setState(170);
							exprList();
							}
						}

						setState(173);
						match(RightParen);
						}
						break;
					case 2:
						{
						_localctx = new PostfixExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpr);
						setState(174);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(175);
						_la = _input.LA(1);
						if ( !(_la==Dot || _la==Arrow) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(176);
						match(Identifier);
						}
						break;
					case 3:
						{
						_localctx = new PostfixExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpr);
						setState(177);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(178);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PlusPlus) | (1L << MinusMinus) | (1L << Delr) | (1L << Delc))) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						break;
					}
					} 
				}
				setState(183);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExprListContext extends ParserRuleContext {
		public InitializationseqContext initializationseq() {
			return getRuleContext(InitializationseqContext.class,0);
		}
		public ExprListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroolParserListener ) ((DroolParserListener)listener).enterExprList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroolParserListener ) ((DroolParserListener)listener).exitExprList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroolParserVisitor ) return ((DroolParserVisitor<? extends T>)visitor).visitExprList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprListContext exprList() throws RecognitionException {
		ExprListContext _localctx = new ExprListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_exprList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			initializationseq();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
